main: fix email address contrast

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -186,7 +186,7 @@ body {
 	width: 100%;
 
 	a {
-		color: #fff;
+		color: #fdfdff;
 		text-decoration: none;
 	}
 
@@ -394,10 +394,6 @@ body {
 
 		a:hover {
 			text-decoration: underline;
-		}
-
-		.email-link {
-			color: #fdfdff;
 		}
 	}
 
